[tool.poetry]
name = "imagine-pi"
version = "0.1.0"
description = "A pi imaging tool"
readme = "README.md"
authors = ["Your Name <you@example.com>"]

repository = "https://github.com/imagine-pi/imagine-pi"

keywords = [
    "raspberrypi",
    "imaging", 
    "setup"
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Operating System"
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.24.0"
sh = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imagine-pi = 'imagine_pi.console:cli'
